Wed Apr 13 19:12:44 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Launch-Failures/Component/Launch_Failure_exec.cpp:
        * tests/DAnCE/Launch-Failures/descriptors/AttributeException.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/AttributeMismatch.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/EntrypointException.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/EntrypointFails.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/EntrypointIncorrect.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/IncorrectLibraryName.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/InvalidInstanceType.cdp:

          Additional failure testing.

Wed Apr 13 07:48:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds4ccm_impl.mpc:
          Added missing base project for windows

Tue Apr 12 11:42:21 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DAnCE/Threading/Component1/Component1_exec.cpp:
        * tests/DAnCE/Threading/Component2/Component2.mpc:
        * tests/DAnCE/Threading/Component2/Component2_exec.cpp:
          Use a timeout to detect the deadlock instead of causing a real
          deadlock, that is much harder to handle in our test framework

Tue Apr 12 10:39:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_base.mpb:
        * MPC/config/dds4ccm_stub.mpb:
          Attempt to fix windows link errors

Tue Apr 12 08:26:58 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender/QCTQM_Test_Sender.mpc:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender/QCTQM_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueriesMany/Sender/QCTQM_Test_Sender.idl: